{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 7,
  "lineage": "a6ccf9f7-0e1b-0956-8350-740fb7397e25",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:311747045935:loadbalancer/app/PRD-Trader-ALB/f598a5c46abebe45",
            "arn_suffix": "app/PRD-Trader-ALB/f598a5c46abebe45",
            "desync_mitigation_mode": "defensive",
            "dns_name": "PRD-Trader-ALB-2008466779.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:311747045935:loadbalancer/app/PRD-Trader-ALB/f598a5c46abebe45",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "PRD-Trader-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f871c8ab05142d1f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0306cc34070b485c9"
              },
              {
                "subnet_id": "subnet-03c5940296b1a8e39"
              }
            ],
            "subnets": [
              "subnet-0306cc34070b485c9",
              "subnet-03c5940296b1a8e39"
            ],
            "tags": {
              "Name": "PRD-Trader-ALB"
            },
            "tags_all": {
              "Name": "PRD-Trader-ALB"
            },
            "vpc_id": "vpc-0bc9652bbad6a7ec7",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:311747045935:listener/app/PRD-Trader-ALB/f598a5c46abebe45/04cb53b70b224755",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:311747045935:listener/app/PRD-Trader-ALB/f598a5c46abebe45/04cb53b70b224755",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:311747045935:loadbalancer/app/PRD-Trader-ALB/f598a5c46abebe45",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.group",
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:311747045935:listener/app/PRD-Trader-ALB/f598a5c46abebe45/114e1cc966538b20",
            "certificate_arn": "arn:aws:acm:us-west-1:311747045935:certificate/21a609c0-2601-44c1-9451-6c62cebfc397",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:311747045935:targetgroup/PRD-Trader-APP1/76532edf86b825cf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:311747045935:listener/app/PRD-Trader-ALB/f598a5c46abebe45/114e1cc966538b20",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:311747045935:loadbalancer/app/PRD-Trader-ALB/f598a5c46abebe45",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.group",
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:311747045935:targetgroup/PRD-Trader-APP1/76532edf86b825cf",
            "arn_suffix": "targetgroup/PRD-Trader-APP1/76532edf86b825cf",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:311747045935:targetgroup/PRD-Trader-APP1/76532edf86b825cf",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "PRD-Trader-APP1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bc9652bbad6a7ec7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:311747045935:security-group/sg-0f871c8ab05142d1f",
            "description": "Allow external http and https traffic to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f871c8ab05142d1f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "PRD-Trader-ALB-External",
            "name_prefix": "",
            "owner_id": "311747045935",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PRD-Trader-ALB-External"
            },
            "tags_all": {
              "Name": "PRD-Trader-ALB-External"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc9652bbad6a7ec7"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}